# ARIS

./: .gitignore  BUILD-LOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/learning/: SKILLS-MASTERY.md
docs/planning/: ARIS-DEEP-RESEARCH-PROMPT.md  ARIS-DOCUMENTATION-CHECKLIST.md  ARIS-EXECUTION-PLAN.md  ARIS-FINAL-PLAN.md  ARIS-IMPROVEMENT-SYNTHESIS.md  ARIS-PHASES-WEEKLY-PLAN.md  ARIS-SUCCESS-CRITERIA.md  ARIS-Tracker.xlsx  ARIS-WEEKLY-DETAILED-PLANS.md  LEARNING-RESOURCES.md  MASTER-PLANNER.xlsx  NETWORKING-PLAYBOOK.md  PROFILE-README.md  TO-DO.md  week 1 speed-run.md
docs/planning/Deep Research Answers/: Chatgpt 1. Plan & Scope Critique.docx  Claude - ARIS — Brutal Pre-Build Feasibility Review.docx  Gemini - F1 Placement Project Feasibility Study.docx  Perplexity - Aris.docx
docs/planning/previous-plans/: AI Racing World Model Plan.docx  NeuroSim Consolidated Master Plan_ Autonomous Racing MVP Roadmap.docx  NeuroSim Initiative_ Research Roadmap and Technical Critique.docx  NeuroSim Master Plan_ Engineering a Predictive F1 World Model.docx  (+1 more)
learning/: kaggle-pandas-speedrun.ipynb
learning/notes/: pandas-gaps.md
notebooks/: 00-numpy-basics.ipynb  01-fastf1-first-pull.ipynb  02-pandas-basics.ipynb  03-pandas-deep-dive.ipynb  04-stint-analysis.ipynb  05-sector-baseline.ipynb
results/: wk2-baseline-mae.csv  wk2-window-sweep.csv
scripts/: prewarm_cache.py  refactor_wk2_notebooks.py  wk2_day3_block2.py  wk2_day3_block4.py  wk2_day3_block5.py
src/aris/: __init__.py  _compat.py
tests/: test_baseline.py  test_scoring.py  test_stint.py
(+6 files in other folders)
